--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,21 @@
-# more ignore
-_FILES
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# dependencies
+/node_modules
 
-# .gitignore for Yeoman-Jekyll projects
+# testing
+/coverage
 
-# Ignore hidden folders #
-# This takes care of .tmp, .sass-cache, and many others #
-.*/
+# production
+/build
 
-# Ignore OS generated files #
-.DS_Store*
-ehthumbs.db
-Icon?
-Thumbs.db
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Always-ignore files and folders #
-*.diff
-*.err
-*.log
-*.orig
-*.rej
-*.swn
-*.swo
-*.swp
-._*
-*~
-
-# Ignore packages #
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# Ignore for Yeoman-Jekyll projects #
-app/bower_components
-dist
-node_modules
-.tmp
-
-# Ignore for RVM users #
-.ruby-version
-.ruby-gemset
-.rvmrc
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
