--- a/package.json
+++ b/package.json
@@ -1,35 +1,28 @@
 {
   "name": "plnichols",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "description": "Yeoman workflow for plnichols",
-  "dependencies": {},
-  "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-autoprefixer": "~1.0.1",
-    "grunt-browser-sync": "^2.1.3",
-    "grunt-build-control": "~0.1.3",
-    "grunt-concurrent": "~0.5.0",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-csslint": "~0.4.0",
-    "grunt-contrib-cssmin": "~0.10.0",
-    "grunt-contrib-htmlmin": "~0.3.0",
-    "grunt-contrib-imagemin": "~0.8.1",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-sass": "~0.8.1",
-    "grunt-contrib-uglify": "~0.5.1",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-filerev": "~0.2.1",
-    "grunt-jekyll": "~0.4.2",
-    "grunt-svgmin": "~0.4.0",
-    "grunt-usemin": "~2.4.0",
-    "jshint-stylish": "~0.4.0",
-    "load-grunt-tasks": "~0.6.0",
-    "time-grunt": "~0.4.0"
+  "dependencies": {
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.13.7",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   },
-  "engines": {
-    "node": ">=0.8.0"
+  "devDependencies": {
+    "react-scripts": "1.1.4"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write ",
+      "git add"
+    ]
+  },
+  "scripts": {
+    "precommit": "lint-staged",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
