--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "lint-staged": "^7.2.0",
     "prettier": "^1.13.7",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-app-rewire-styled-components": "^3.0.2",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^3.3.3"
   },
   "devDependencies": {
+    "react-app-rewired": "^1.5.2",
     "react-scripts": "1.1.4"
   },
   "lint-staged": {
@@ -20,9 +24,9 @@
   },
   "scripts": {
     "precommit": "lint-staged",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
