Add json-server, eslint and editor config

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "plnichols",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
@@ -13,6 +14,7 @@
     "styled-components": "^3.3.3"
   },
   "devDependencies": {
+    "json-server": "^0.14.0",
     "react-app-rewired": "^1.5.2",
     "react-scripts": "1.1.4"
   },
