--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-app-rewire-styled-components": "^3.0.2",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.3.3",
+    "styled-normalize": "^8.0.0"
   },
   "devDependencies": {
     "json-server": "^0.14.0",
