--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "styled-normalize": "^8.0.0"
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^3.1.1",
     "json-server": "^0.14.0",
     "react-app-rewired": "^1.5.2",
     "react-scripts": "1.1.4"
