--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
-      "prettier --single-quote --write ",
+      "prettier --write ",
       "git add"
     ]
   },
