--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
+    "polished": "^1.9.3",
     "prettier": "^1.13.7",
     "react": "^16.4.1",
     "react-app-rewire-styled-components": "^3.0.2",
