--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "sass": "^1.54.9"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
     "@types/react": "18.0.19",
+    "classnames": "^2.3.1",
     "typescript": "4.8.3"
   }
 }
